--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "webpack serve --content-base public"
   },
   "dependencies": {
+    "ajax": "0.0.4",
     "fhirclient": "^2.3.11",
     "svelte-routing": "^1.5.0"
   }
