--- a/helms/dips-ehr-app/manifest.yaml
+++ b/helms/dips-ehr-app/manifest.yaml
@@ -1,13 +1,20 @@
 ---
+# Source: dips-ehr-app/templates/namespace.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+    name: thor
+---
 # Source: dips-ehr-app/templates/serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: release-name-dips-ehr-app
+  name: thor-dips-ehr-app
+  namespace: thor
   labels:
     helm.sh/chart: dips-ehr-app-1.0.1
     app.kubernetes.io/name: dips-ehr-app
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: thor
     app.kubernetes.io/version: "v1.0.1.8"
     app.kubernetes.io/managed-by: Helm
 ---
@@ -15,11 +22,12 @@ metadata:
 apiVersion: v1
 kind: Service
 metadata:
-  name: release-name-dips-ehr-app
+  name: thor-dips-ehr-app
+  namespace: thor
   labels:
     helm.sh/chart: dips-ehr-app-1.0.1
     app.kubernetes.io/name: dips-ehr-app
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: thor
     app.kubernetes.io/version: "v1.0.1.8"
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -31,17 +39,18 @@ spec:
       name: http
   selector:
     app.kubernetes.io/name: dips-ehr-app
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: thor
 ---
 # Source: dips-ehr-app/templates/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: release-name-dips-ehr-app
+  name: thor-dips-ehr-app
+  namespace: thor
   labels:
     helm.sh/chart: dips-ehr-app-1.0.1
     app.kubernetes.io/name: dips-ehr-app
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: thor
     app.kubernetes.io/version: "v1.0.1.8"
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -49,14 +58,14 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: dips-ehr-app
-      app.kubernetes.io/instance: release-name
+      app.kubernetes.io/instance: thor
   template:
     metadata:
       labels:
         app.kubernetes.io/name: dips-ehr-app
-        app.kubernetes.io/instance: release-name
+        app.kubernetes.io/instance: thor
     spec:
-      serviceAccountName: release-name-dips-ehr-app
+      serviceAccountName: thor-dips-ehr-app
       securityContext:
         {}
       containers:
@@ -65,6 +74,9 @@ spec:
             {}
           image: "thorstenbaek/dips-ehr-app:v1.0.1.8"
           imagePullPolicy: IfNotPresent
+          env:
+            - name: CONFIG_URL
+              value: "https://raw.githubusercontent.com/thorstenbaek/sandbox-environments/master/"
           ports:
             - name: http
               containerPort: 80
@@ -84,23 +96,32 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: release-name-dips-ehr-app
+  name: thor-dips-ehr-app
+  namespace: thor
   labels:
     helm.sh/chart: dips-ehr-app-1.0.1
     app.kubernetes.io/name: dips-ehr-app
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: thor
     app.kubernetes.io/version: "v1.0.1.8"
     app.kubernetes.io/managed-by: Helm
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
+  tls:
+    - hosts:
+        - "thor.dips-ehr-app.stenbaek.no"
+      secretName: dips-ehr-app-tls
   rules:
-    - host: "chart-example.local"
+    - host: "thor.dips-ehr-app.stenbaek.no"
       http:
         paths:
           - path: /
             pathType: ImplementationSpecific
             backend:
               service:
-                name: release-name-dips-ehr-app
+                name: thor-dips-ehr-app
                 port:
                   number: 80
 ---
@@ -108,11 +129,11 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "release-name-dips-ehr-app-test-connection"
+  name: "thor-dips-ehr-app-test-connection"
   labels:
     helm.sh/chart: dips-ehr-app-1.0.1
     app.kubernetes.io/name: dips-ehr-app
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: thor
     app.kubernetes.io/version: "v1.0.1.8"
     app.kubernetes.io/managed-by: Helm
   annotations:
@@ -122,5 +143,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['release-name-dips-ehr-app:80']
+      args: ['thor-dips-ehr-app:80']
   restartPolicy: Never
