--- a/helms/dips-ehr-app/templates/deployment.yaml
+++ b/helms/dips-ehr-app/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "dips-ehr-app.fullname" . }}
+  namespace: {{ .Release.Name }}
   labels:
     {{- include "dips-ehr-app.labels" . | nindent 4 }}
 spec:
@@ -33,6 +34,11 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:            
+          {{- range $key, $value := .Values.environmentVariables }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+          {{- end }}
           ports:
             - name: http
               containerPort: 80
