--- a/helms/dips-ehr-app/templates/hpa.yaml
+++ b/helms/dips-ehr-app/templates/hpa.yaml
@@ -3,6 +3,7 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "dips-ehr-app.fullname" . }}
+  namespace: {{ .Release.Name }}
   labels:
     {{- include "dips-ehr-app.labels" . | nindent 4 }}
 spec:
