--- a/helms/dips-ehr-app/templates/service.yaml
+++ b/helms/dips-ehr-app/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "dips-ehr-app.fullname" . }}
+  namespace: {{ .Release.Name }}
   labels:
     {{- include "dips-ehr-app.labels" . | nindent 4 }}
 spec:
