--- a/helms/dips-ehr-app/templates/serviceaccount.yaml
+++ b/helms/dips-ehr-app/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "dips-ehr-app.serviceAccountName" . }}
+  namespace: {{ .Release.Name }}
   labels:
     {{- include "dips-ehr-app.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
