--- a/helms/dips-ehr-app/values.yaml
+++ b/helms/dips-ehr-app/values.yaml
@@ -4,6 +4,8 @@
 
 replicaCount: 1
 
+dummy: &appName "dips-ehr-app"
+
 image:
   repository: thorstenbaek/dips-ehr-app
   pullPolicy: IfNotPresent
@@ -43,18 +45,19 @@ service:
 ingress:
   enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   hosts:
-    - host: chart-example.local
+    - host: *appName
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:
+    - secretName: dips-ehr-app-tls
+      hosts:
+        - *appName
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -81,5 +84,7 @@ tolerations: []
 
 affinity: {}
 
+domain: "stenbaek.no"
+
 environmentVariables:    
-  CONFIG_URL: https://raw.githubusercontent.com/thorstenbaek/sandbox-environments/RELEASE-FOLDER/
+  CONFIG_URL: https://raw.githubusercontent.com/thorstenbaek/sandbox-environments/master/
